# spark-delta-streaming-pipeline

./: .dockerignore  .gitignore  Makefile  README.md  make.cmd  pyproject.toml  requirements.txt
generator/: iot_telemetry_generator.py
infra/docker/: Dockerfile  config.docker.yaml  docker-compose.yml  entrypoint.sh
monitoring/: dashboard.py  live_dashboard.py  metrics_collector.py  report.html
notebooks/: anomaly_detection.ipynb  exploration.ipynb  ml_anomaly_model.ipynb  pipeline_showcase.ipynb
pipeline/bronze_ingest/: bronze_ingest_stream.py  schema.py
pipeline/common/: config.yaml  logging_config.py  utils.py
pipeline/gold_aggregations/: feature_engineering.py  gold_aggregations_job.py
pipeline/silver_transform/: quality_rules.py  silver_transform_job.py
scripts/: generate_dashboard.py  validate_bronze.py  validate_e2e.py  validate_gold.py  validate_governance.py  validate_resilience.py  validate_silver.py
tests/: conftest.py  test_bronze.py  test_config.py  test_gold.py  test_integration.py  test_silver.py
